--- a/package.json
+++ b/package.json
@@ -15,24 +15,38 @@
     "@google/generative-ai": "^0.16.0",
     "@neondatabase/serverless": "^0.9.4",
     "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@toast-ui/react-editor": "^3.2.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "core-js": "^3.38.0",
     "drizzle-orm": "^0.32.1",
+    "json5": "^2.2.3",
     "lucide-react": "^0.417.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
+    "qs": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-speech-to-text": "^0.8.0",
+    "react-speech-recognition": "^3.10.0",
+    "react-webcam": "^7.2.0",
+    "regenerator-runtime": "^0.14.1",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/core-js": "^2.5.8",
     "@types/node": "^20",
+    "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-speech-recognition": "^3.9.5",
+    "@types/regenerator-runtime": "^0.13.6",
+    "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.23.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
