--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
     "lucide-react": "^0.417.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "qs": "^6.13.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-hook-speech-to-text": "^0.8.0",
     "react-speech-recognition": "^3.10.0",
     "react-webcam": "^7.2.0",
     "regenerator-runtime": "^0.14.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0"
