--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.2.8",
+    "@clerk/nextjs": "^5.4.1",
     "@google/generative-ai": "^0.16.0",
     "@neondatabase/serverless": "^0.9.4",
     "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@toast-ui/react-editor": "^3.2.3",
     "axios": "^1.7.7",
@@ -28,7 +33,7 @@
     "json5": "^2.2.3",
     "lucide-react": "^0.417.0",
     "moment": "^2.30.1",
-    "next": "14.2.5",
+    "next": "^14.2.9",
     "next-themes": "^0.3.0",
     "qs": "^6.13.0",
     "react": "^18.3.1",
@@ -43,7 +48,9 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "xlsx": "^0.18.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/core-js": "^2.5.8",
@@ -54,7 +61,7 @@
     "@types/react-speech-recognition": "^3.9.5",
     "@types/regenerator-runtime": "^0.13.6",
     "@types/uuid": "^10.0.0",
-    "drizzle-kit": "^0.23.1",
+    "drizzle-kit": "^0.23.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
