--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18.3.1",
     "react-hook-speech-to-text": "^0.8.0",
     "react-router-dom": "^6.26.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-simple-wysiwyg": "^3.1.2",
     "react-speech-recognition": "^3.10.0",
     "react-web-share": "^2.0.2",
@@ -48,6 +49,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0",
     "uuid": "^10.0.0",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
