--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-web-share": "^2.0.2",
     "react-webcam": "^7.2.0",
     "regenerator-runtime": "^0.14.1",
+    "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
